--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Document</title>
+	<title>Распознавание речи</title>
 	<link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
-	<p class="result"></p>
-	<button class="btn">запись</button>
+	<div class="container">
+		<h1>Распознавание речи</h1>
+		<p class="result"></p>
+		<button class="mic-btn">Подключить микрофон</button>
+		<button class="btn">Начать запись</button>
+		<button class="clear-btn">Очистить текст</button>
+	</div>
 	<script src="./main.js"></script>
 </body>
 
