--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<div class="container">
 		<h1>Распознавание речи</h1>
 		<p class="result"></p>
+		<div class="loader" style="display: none;">Подключение к микрофону...</div>
 		<button class="mic-btn">Подключить микрофон</button>
 		<button class="btn">Начать запись</button>
 		<button class="clear-btn">Очистить текст</button>
